Towards Goby 2.0
 - Add ability to preserve SAM/BAM read groups. Read groups are automatically preserved if present in the input BAM file.
   The concatenate mode automatically reassigns read_origin indices (see field read_origin_index) to prevent conflicts
   when Goby files from different origins are concatenated. The approach we use is to keep the most specific read origin
   information, and let the client decide what origins/groups are equivalent given the type of analysis at hand.
   Read groups are supported by the hybrid codec (and therefore stored very efficiently), are imported from BAM with
   sam-to-compact and are exported back to SAM/BAM with the compact-to-bam mode.
 - Add ability to preserve all BAM attributes during import and export. Use --preserve-all-tags in mode sam-to-compact
   to enable this.
 - Add ability to preserve all quality scores. Use --preserve-all-mapped-qualities in mode sam-to-compact.
 - Supports bzip2 compression in fasta-to-compact mode and sam-extract-reads (use the -x MessageChunksWriter:codec=bzip2
   dynamic option).
 - Renamed SortMode to Sort1Mode. Renamed SortLargeMode to SortMode.
 - Added SortLargeMode which can sort compact alignments of any size, multithreaded.
 - Fixes to sam-to-compact mode. Previous versions could fail for a variety of reasons. We have stress tested this mode
   throwing at it various input BAM files, sorted or not and fixed the bugs we found. For instance, the --sorted option
   would not work in some 1.9 versions of Goby after samtools/picard changed the semantic of the record comparator Goby
   relied upon to verify the input was indeed sorted by position. This made it impossible to convert already sorted BAM
   files as sorted Goby alignments).
 - Moved error messages produced when parsing the command line of a mode to after usage. This is a simple change that
   will make it easier to diagnose problems on a command line without having to scroll back up the console.