@@ -63,4 +63,9 @@ public class NullChunkCodec implements ChunkCodec {
 
     }
 
+    @Override
+    public int getSuggestedChunkSize() {
+        return 10000;
+    }
+
 }
